--- a/index5.html
+++ b/index5.html
@@ -9,6 +9,13 @@
 <input type="submit" value="ar lyginis" onclick="handleClick()">
 <div id="output"></div>
 <script>
+    // 1-> susikurti sumos kintamaji globalioje erdveje
+    // 2-> nuskaityti teksta is input lauko
+    // 2.1-> jeigu tekstas yra ne skaicius if(isNaN(zodis)==true), rodyti dokumente-> "ne skaicius"
+    // 3-> prieingu atveju paziureti ar tekstas yra lygus "0"
+    // 4-> jeigu tekstas yra lygus "0", turima atsakyma spausdinti i div
+    // 5-> jeigu tekstas nelygu "0", ivesta teksta paversti i skaiciu ir prideti prie atsakymo
+isNaN("")
     var atsakymas = 0;
 
     function handleClick() {
