--- a/task1/index.html
+++ b/task1/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
-    <script src="uzduotis5.js" language="JavaScript" type="text/javascript" ></script>
+    <script src="script.js" language="JavaScript" type="text/javascript" ></script>
 </head>
 <body>
 <input type="text" placeholder="iveskite skaiciu" id="input">
