--- a/task10/index.html
+++ b/task10/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <script src="uzduotis6.js" language="JavaScript" type="text/javascript" ></script>
+    <script src="script.js" language="JavaScript" type="text/javascript" ></script>
 </head>
 <body>
 <input type="text" placeholder="iveskite zodzius atskirtus kableliais" id="input">
